@@ -1,3 +1,13 @@
+2011-09-08  Andras Becsi  <andras.becsi@nokia.com>
+
+        [Qt] Build fails with strict compiler
+        https://bugs.webkit.org/show_bug.cgi?id=67778
+
+        Reviewed by Csaba Osztrogonác.
+
+        * src/compiler/glslang_lex.cpp: Regenerate with generate_glslang_lexer.sh using a newer flex
+        to suppress warning and fix the build when using [-Werror=unused-result]
+
 2011-08-12  Mark Rowe  <mrowe@apple.com>
 
         Be more forward-looking in the choice of compiler.
